8231497: [lworld] Inline type use of Access API (Runtime)
Reviewed-by: fparain